[package]
name = "beluga"
version = "1.0.0"
description = "Curve-like Swap"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.11.10"
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-sdk = "1.11.10"
proptest = "1.0"
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
